# t

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: BlinnPhong_8hpp_source.html  Box_8hpp_source.html  BufferAttribute_8hpp_source.html  Camera_8hpp_source.html  Geometry_8hpp_source.html  Light_8hpp_source.html  Matrix3x3_8hpp_source.html  Mesh_8hpp_source.html  NormalColor_8hpp_source.html  OrthographicCamera_8hpp_source.html  Plane_8hpp_source.html  Scene_8hpp_source.html  Texture_8hpp_source.html  Uniforms_8hpp_source.html  Varyings_8hpp_source.html  algorithms_8hpp.html  algorithms_8hpp.js  classes.html  classt_1_1AmbientLight-members.html  classt_1_1BlinnPhong-members.html  classt_1_1BlinnPhong.js  classt_1_1Box-members.html  classt_1_1BufferAttribute-members.html  classt_1_1BufferAttribute.html  classt_1_1BufferAttribute.js  classt_1_1Camera.html  classt_1_1Color-members.html  classt_1_1EulerRotation-members.html  classt_1_1EulerRotation.html  classt_1_1Geometry.js  classt_1_1Light-members.html  classt_1_1Matrix3x3.js  classt_1_1Matrix4x4.html  classt_1_1Mesh-members.html  classt_1_1Mesh.html  classt_1_1Mesh.js  classt_1_1NormalColor.js  classt_1_1Object3D-members.html  classt_1_1Object3D.html  classt_1_1Object3D.js  (+64 more)
docs/html/: AmbientLight_8hpp_source.html  Attributes_8hpp_source.html  Color_8hpp_source.html  EulerRotation_8hpp_source.html  Fragment_8hpp_source.html  Material_8hpp_source.html  Matrix4x4_8hpp_source.html  Object3D_8hpp_source.html  PerspectiveCamera_8hpp_source.html  PointLight_8hpp_source.html  Rasterizer_8hpp_source.html  RenderTarget_8hpp_source.html  SolidColor_8hpp_source.html  UtahTeapot_8hpp_source.html  Vector3_8hpp_source.html  Vector4_8hpp_source.html  _2home_2zach_2Code_2GitHub_2cszach_2t_2include_2primitives_2Color_8hpp-example.html  _formulas.tex  _formulas_dark.tex  algorithms_8hpp_source.html  annotated.html  annotated_dup.js  classt_1_1AmbientLight.html  classt_1_1AmbientLight.js  (+93 more)
include/: algorithms.hpp  constants.hpp  t.hpp
src/: cornell_box.cpp  cube.cpp  t.cpp  teapot.cpp  teapot2.cpp  triangle.cpp
tests/: main.cpp
(+144 files in other folders)
