cmake_minimum_required(VERSION 3.5)

project (t LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Library

set(LIBRARY_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)

set(LIBRARY_SOURCES
	${LIBRARY_SOURCE_DIR}/t.cpp
)

add_library(t STATIC ${LIBRARY_SOURCES})
target_include_directories(
	t
	PUBLIC
	${CMAKE_SOURCE_DIR}/include/
)

install(
	TARGETS t
	RUNTIME
	LIBRARY
)